events page right button arrow left side spacing fixed

--- a/docroot/sites/all/themes/ambitious/sass/forms.scss
+++ b/docroot/sites/all/themes/ambitious/sass/forms.scss
@@ -110,11 +110,12 @@
 	  float:left; 
 	  input[type=submit]{
 	    padding:10px;
-	    padding-right: 38px;
+	    padding-right: 40px;
 	    background-image:url('../images/sprite_new.png');
-	    background-position: 99px -204px;
+	    background-position: 110px -204px;
 		background-repeat: no-repeat;
 		background-size: 249px;
+		padding-left:19px;
 	  }
 	 /* &:after{
 	    @extend [class*=" icon-"];
